@@ -5,99 +5,115 @@
 	<groupId>net.nawia.www</groupId>
 	<artifactId>gsao</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>ejb</packaging>
 	<name>Game Server Access Objects</name>
 	<parent>
 		<groupId>net.nawia</groupId>
 		<artifactId>www</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	<properties>
+		<version.org.jboss.arquillian>1.0.0.Alpha4</version.org.jboss.arquillian>
 
+		<!-- The target version of JBoss AS to be used -->
+		<version.org.jboss.jbossas>6.0.0.Final</version.org.jboss.jbossas>
+
+		<!-- jboss.home (We'll unpack into here -->
+		<jboss.home>${project.build.directory}/jboss-${version.org.jboss.jbossas}</jboss.home>
+	</properties>
+            <dependencyManagement>
+                <dependencies>
+                          
+                    <!-- org.jboss.jbossas -->
+                    <dependency>
+                        <groupId>org.jboss.jbossas</groupId>
+                        <artifactId>jboss-as-depchain</artifactId>
+                        <version>${version.org.jboss.jbossas}</version>
+                        <type>pom</type>
+                        <scope>import</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
 	<build>
-		<plugins>
+        <plugins>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>2.3.2</version>
+               <configuration>
+                   <source>1.6</source>
+                   <target>1.6</target>
+               </configuration>
+            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>generate-test-resources</phase>
+						<!-- So run before testing -->
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.jboss.jbossas</groupId>
+									<artifactId>jboss-as-distribution</artifactId>
+									<version>${version.org.jboss.jbossas}</version>
+									<type>zip</type>
+									<overWrite>false</overWrite>
+									<outputDirectory>${project.build.directory}</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-ejb-plugin</artifactId>
 				<version>2.3</version>
-				<configuration>
-					<ejbVersion>3.1</ejbVersion>
-				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.6</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>jboss-maven-plugin</artifactId>
-				<version>1.4.1</version>
+
 				<configuration>
-					<hostName>localhost</hostName>
-					<port>8080</port>
-					<fileNames>
-						<fileName>target/gsao-0.0.1-SNAPSHOT.jar</fileName>
-					</fileNames>
+					<additionalClasspathElements>
+						<additionalClasspathElement>${jboss.home}/client/jbossws-native-client.jar</additionalClasspathElement>
+						<additionalClasspathElement>${jboss.home}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
+					</additionalClasspathElements>
+
+					<trimStackTrace>false</trimStackTrace>
+					<printSummary>true</printSummary>
+
+					<!-- Caution: no linebreak here ! -->
+					<argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Djava.endorsed.dirs=${jboss.home}/lib/endorsed -Djboss.home=${jboss.home} -Djboss.boot.server.log.dir=${jboss.home} -Dorg.jboss.reflect.spi.TypeInfoFactory=org.jboss.reflect.plugins.introspection.IntrospectionTypeInfoFactory</argLine>
 				</configuration>
+
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>sql-maven-plugin</artifactId>
 				<version>1.4</version>
-
 				<dependencies>
 					<dependency>
-						<groupId>postgresql</groupId>
-						<artifactId>postgresql</artifactId>
-						<version>9.0-801.jdbc4</version>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.3.148</version>
 					</dependency>
 				</dependencies>
-
-				<!-- common configuration shared by all executions -->
 				<configuration>
-					<driver>org.postgresql.Driver</driver>
-					<url>jdbc:postgresql://10.254.239.1/nawia</url>
-					<username>nawia_gs</username>
-					<password>NAeGg8SrJjniYDix</password>
-					<!-- You can comment out username/password configurations and have maven 
-						to look them up in your settings.xml using ${settingsKey} -->
+					<driver>org.h2.Driver</driver>
+					<url>jdbc:h2:tcp://localhost/mem:gsdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;AUTO_SERVER=TRUE;AUTO_RECONNECT=TRUE</url>
+					<username>sa</username>
+					<password></password>
 					<settingsKey>sensibleKey</settingsKey>
-					<!--all executions are ignored if -Dmaven.test.skip=true -->
 					<skip>${maven.test.skip}</skip>
 				</configuration>
-
 				<executions>
-					<execution>
-						<id>drop-db-before-test-if-any</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<!-- need another database to drop the targeted one -->
-							<url>jdbc:postgresql://10.254.239.1/tmp</url>
-							<autocommit>true</autocommit>
-							<sqlCommand>drop database nawia</sqlCommand>
-							<!-- ignore error when database is not avaiable -->
-							<onError>continue</onError>
-							<delimiterType>row</delimiterType>
-						</configuration>
-					</execution>
-
-					<execution>
-						<id>create-db</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<url>jdbc:postgresql://10.254.239.1/tmp</url>
-							<!-- no transaction -->
-							<autocommit>true</autocommit>
-							<sqlCommand>create database nawia</sqlCommand>
-							<delimiterType>row</delimiterType>
-						</configuration>
-					</execution>
-
 					<execution>
 						<id>create-schema</id>
 						<phase>process-test-resources</phase>
@@ -112,20 +128,62 @@
 							<delimiterType>row</delimiterType>
 						</configuration>
 					</execution>
-
-					<!-- <execution> <id>create-data</id> <phase>process-test-resources</phase> 
-						<goals> <goal>execute</goal> </goals> <configuration> <orderFile>ascending</orderFile> 
-						<fileset> <basedir>${basedir}</basedir> <includes> <include>src/test/sql/test-data2.sql</include> 
-						<include>src/test/sql/test-data1.sql</include> </includes> </fileset> </configuration> 
-						</execution> <execution> <id>drop-db-after-test</id> <phase>test</phase> 
-						<goals> <goal>execute</goal> </goals> <configuration> <autocommit>true</autocommit> 
-						<sqlCommand>drop database nawia</sqlCommand> <delimiterType>row</delimiterType> 
-						</configuration> </execution> -->
 				</executions>
 			</plugin>
-		</plugins>
+			<!--<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>dbunit-maven-plugin</artifactId> 
+				<version>1.0-beta-3</version> <dependencies> <dependency> <groupId>postgresql</groupId> 
+				<artifactId>postgresql</artifactId> <version>9.0-801.jdbc4</version> </dependency> 
+				</dependencies> <configuration> <driver>org.postgresql.Driver</driver> <url>jdbc:postgresql://10.254.239.1/nawia</url> 
+				<username>nawia_gs</username> <password>NAeGg8SrJjniYDix</password> <settingsKey>sensibleKey</settingsKey> 
+				<skip>${maven.test.skip}</skip> </configuration> <executions> <execution> 
+				<id>insert</id> <phase>test-compile</phase> <goals> <goal>operation</goal> 
+				</goals> <configuration> <type>CLEAN_INSERT</type> <src>src/test/data/insert.xml</src> 
+				</configuration> </execution> <execution> <id>export</id> <phase>test</phase> 
+				<goals> <goal>export</goal> </goals> <configuration> <format>xml</format> 
+				<dest>target/dbunit/export.xml</dest> </configuration> </execution> </executions> 
+				</plugin> -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<mainClass>org.h2.tools.Server</mainClass> 
+							<arguments> 
+								<argument>-tcp</argument>
+								<argument>-tcpDaemon</argument>
+							</arguments> 
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<mainClass>org.h2.tools.Server</mainClass> 
+							<arguments> 
+								<argument>-tcpShutdown</argument>
+							</arguments> 
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+        </plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>org.jboss.ejb3</groupId>
+			<artifactId>jboss-ejb3-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -143,26 +201,8 @@
 			<version>1.0-SP1</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.0.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>jta</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>5.14.2</version>
-			<scope>test</scope>
-		</dependency>
 		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-api</artifactId> 
 			<version>1.6.1</version> </dependency> -->
-		<!-- <dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
-			<version>2.0.0</version> <type>jar</type> <scope>test</scope> </dependency> -->
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -171,42 +211,45 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.arquillian</groupId>
-			<artifactId>arquillian-testng</artifactId>
-			<version>1.0.0.Alpha4.SP1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.ejb3.embedded</groupId>
-			<artifactId>jboss-ejb3-embedded-standalone</artifactId>
-			<version>1.0.0-alpha-2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.6.0.CR2</version>
-		</dependency>
-		<!-- <dependency> <groupId>org.jboss.arquillian.container</groupId> <artifactId>arquillian-jbossas-embedded-6</artifactId> 
-			<version>1.0.0.Alpha4.SP1</version> </dependency> <dependency> <groupId>org.jboss.jbossas</groupId> 
-			<artifactId>jboss-as-depchain</artifactId> <version>6.0.0.20100911-M5</version> 
-			<type>pom</type> <scope>compile</scope> </dependency> -->
-		<dependency>
 			<groupId>org.jboss.arquillian.container</groupId>
-			<artifactId>arquillian-jbossas-remote-6</artifactId>
-			<version>1.0.0.Alpha4.SP1</version>
-			<scope>test</scope>
+			<artifactId>arquillian-jbossas-embedded-6</artifactId>
+			<version>${version.org.jboss.arquillian}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.jbossas</groupId>
-			<artifactId>jboss-as-client</artifactId>
-			<version>6.0.0.20100911-M5</version>
+			<artifactId>jboss-as-depchain</artifactId>
+			<version>${version.org.jboss.jbossas}</version>
 			<type>pom</type>
-			<exclusions>
-				<exclusion>
-					<artifactId>activation</artifactId>
-					<groupId>javax.activation</groupId>
-				</exclusion>
-			</exclusions>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian</groupId>
+			<artifactId>arquillian-testng</artifactId>
+			<version>${version.org.jboss.arquillian}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian</groupId>
+			<artifactId>arquillian-api</artifactId>
+			<version>${version.org.jboss.arquillian}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.4.8</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>5.12.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.148</version>
 		</dependency>
 	</dependencies>
 </project>
